plugins {
	id 'net.fabricmc.fabric-loom' version '1.17.+'
	id 'maven-publish'
}

repositories {
	// maven { url = 'https://masa.dy.fi/maven' }
	maven { url = 'https://maven.fallenbreath.me/releases'
		content {includeGroupAndSubgroups("me.fallenbreath")}
	}
	maven { url = 'https://oss.sonatype.org/content/repositories/snapshots'
		content { includeGroupAndSubgroups("me.lucko") }
	}
	maven { url = 'https://maven.nucleoid.xyz/'
		content { includeGroupAndSubgroups("me.lucko") }
	}
	maven { url = 'https://maven.sakuraryoko.com'
		content { includeGroupAndSubgroups("me.lucko") }
//		content {includeGroupAndSubgroups("com.sakuraryoko") }
	}
    maven { url = 'https://jitpack.io'
		content { includeGroupAndSubgroups('com.github') }
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
//    mappings loom.officialMojangMappings()
	implementation "net.fabricmc:fabric-loader:${project.fabric_loader_version}"
	implementation "com.google.code.findbugs:jsr305:3.0.2"

	// Fabric API. This is technically optional, but you probably want it anyway.
	//modCompile "net.fabricmc.fabric-api:fabric-api:" + project.fabric_version
	include(implementation(fabricApi.module("fabric-api-base", project.fabric_api_version)))
	include(implementation(fabricApi.module("fabric-networking-api-v1", project.fabric_api_version)))

	// Lucko Permissions API
	implementation include("me.lucko:fabric-permissions-api:${project.fabric_permissions_api_version}")
//	runtimeOnly 'me.fallenbreath:mixin-auditor:0.2.0-u'
}

base {
	group = project.group + "." + project.mod_id
	archivesName = project.mod_file_name + '-' + project.minecraft_version_out
	version = project.mod_version

	if (version.endsWith('-dev')) {
		version += "." + new Date().format('yyyyMMdd.HHmmss')
	}
}

loom {
    accessWidenerPath = file("src/main/resources/servux.accesswidener")

//	def commonVmArgs = ['-Dmixin.debug.export=true', '-Dmixin.debug.countInjections=true']
//	// [FEATURE] MIXIN_AUDITOR
//	runs {
//		def auditVmArgs = [*commonVmArgs, '-DmixinAuditor.audit=true']
//		serverMixinAudit {
//			server()
//			vmArgs auditVmArgs
//			ideConfigGenerated false
//		}
//	}
}

processResources {
	// Exclude the GIMP image files
	exclude '**/*.xcf'
	exclude '**/xcf'

	// this will ensure that this task is redone when the versions change.
	//inputs.property "minecraft_version", project.project.minecraft_version

	inputs.property "mod_version", project.mod_version

	filesMatching("fabric.mod.json") {
		expand "mod_version": project.mod_version
	}
}

tasks.withType(JavaCompile).configureEach {
	// ensure that the encoding is set to UTF-8, no matter what the system default is
	// this fixes some edge cases with special characters not displaying correctly
	// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
	// If Javadoc is generated, this must be specified in that task too.
	it.options.encoding = "UTF-8"

	// Minecraft 26.1+ uses Java 25.
	it.options.release = 25
}

tasks.withType(AbstractArchiveTask).configureEach {
	preserveFileTimestamps = true
	//reproducibleFileOrder = true
}

java {
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${base.archivesName}"}
	}
}

tasks.publish.dependsOn build
publishing {
	publications {
		mavenJava(MavenPublication) {
			// How to introduce archivesName here without it breaking?
			artifactId = base.archivesName.get()

			// add all the jars that should be included when publishing to maven
			//artifact(jar)             { builtBy remapJar }
			from components.java
		}
	}

	repositories {
		maven {
			url = "$projectDir/../../CommonMaven"
		}
	}
}
